--- a/Level1/package.json
+++ b/Level1/package.json
@@ -30,6 +30,7 @@
     "@nestjs/cli": "^9.3.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@prisma/client": "^4.15.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
@@ -41,6 +42,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
     "prettier": "^2.7.1",
+    "prisma": "^4.15.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
