update : docker-compose and migration prisma

--- a/Level1/docker-compose.yml
+++ b/Level1/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   dev-db:
     image: postgres:13
     ports:
-      - 5434:5434
+      - 5434:5432
     environment:
-      POSTGRES_USER : postgres
-      POSTGRES_PASSWORD : 123
+      POSTGRES_USER : admin
+      POSTGRES_PASSWORD : 123456
       POSTGRES_DB : nest
     networks:
       - lnwNetwork
